--- a/prueba.yml
+++ b/prueba.yml
@@ -6,6 +6,8 @@ spring:
     devtools:
         restart:
             enabled: true
+    profiles:
+        active: oracle  
 
     liquibase:
         enabled: false
