--- a/prueba-dev.yml
+++ b/prueba-dev.yml
@@ -6,3 +6,6 @@ spring:
         password: sigesa2015
     jpa:
         database-platform: org.hibernate.community.dialect.Oracle12cDialect
+
+    profiles:
+        active: cargoBien
