--- a/prueba.yml
+++ b/prueba.yml
@@ -9,6 +9,9 @@ spring:
 
     liquibase:
         enabled: false
+
+    profiles:
+        active: defecto  
     jpa:
         properties:
             hibernate:
