--- a/prueba.yml
+++ b/prueba.yml
@@ -11,7 +11,7 @@ spring:
         enabled: false
 
     profiles:
-        active: prod  
+        active: dev  
     jpa:
         properties:
             hibernate:
